--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:id="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/holo_blue_dark"
-        android:text="@string/last_recipes_logo"/>
+        android:textColor="@android:color/holo_green_dark"
+        android:text="@string/news_tab_textview"/>
 
 </RelativeLayout>
