--- a/app/src/main/res/layout/next_show.xml
+++ b/app/src/main/res/layout/next_show.xml
@@ -12,6 +12,6 @@
         android:id="@+id/textView"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/holo_blue_dark"
-        android:text="@string/last_recipes_logo"/>
+        android:text="@string/next_show"/>
 
 </RelativeLayout>
