--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,12 @@
     <color name="white">#FFF</color>
     <color name="light_green">#a4dfa5</color>
     <color name="dark_green">#558000</color>
-    <color name="red">#f27038</color>
+    <color name="red">#b32d18</color>
     <color name="yellow">#efe230</color>
     <color name="dark_yellow">#d2c72b</color>
     <color name="ripple_material_light_1">#1f000000</color>
-    <color name="red_primary_header">#fc0000</color>
+    <color name="red_primary_header">#a90a0a</color>
     <color name="gray_primary_header">#6e6d6d</color>
-    <color name="red__header">#b63a24</color>
-    <color name="gray__header">#898686</color>
+    <color name="red_header">#be3921</color>
+    <color name="gray_header">#898686</color>
 </resources>
