Добавил карточки реслеров.

--- a/app/src/main/res/layout-land/superstars_layout.xml
+++ b/app/src/main/res/layout-land/superstars_layout.xml
@@ -25,12 +25,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/saladButton"
+                android:id="@+id/antonderyabin_ImageButton"
                 android:src="@drawable/salad_cat"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
-                android:onClick="saladCatButton"
-                android:contentDescription="@string/salad_descr"
+                android:onClick="antonDeryabinButton"
+                android:contentDescription="@string/anton_deryabin_descr"
                 android:cropToPadding="false"
                 android:background="#ffffff"
                 android:clickable="true"
@@ -39,25 +39,25 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/soupButton"
+                android:id="@+id/sergwhite_ImageButton"
                 android:src="@drawable/soup_cat"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
                 android:padding="5dp"
-                android:contentDescription="@string/name_soupButton"
+                android:contentDescription="@string/name_sergwhiteButton"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/meatButton"
+                android:id="@+id/loko_imageButton"
                 android:src="@drawable/meat_cat"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_meatButton"
+                android:contentDescription="@string/name_lokoButton"
                 android:padding="5dp" />
 
         </TableRow>
@@ -69,9 +69,9 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="@string/name_saladButton"
-                android:id="@+id/button_salad_bottom"
-                android:onClick="saladCatButton"
+                android:text="@string/name_antonDeryabin"
+                android:id="@+id/button_antonderyabin_bottom"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -82,8 +82,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="@string/name_soupButton"
-                android:id="@+id/button_soup_bottom"
+                android:text="@string/name_sergwhiteButton"
+                android:id="@+id/button_sergwhite_bottom"
                 android:layout_column="1"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -95,9 +95,9 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="@string/name_meatButton"
-                android:id="@+id/button_meat_bottom"
-                android:onClick="saladCatButton"
+                android:text="@string/name_lokoButton"
+                android:id="@+id/button_loko_bottom"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -113,12 +113,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/chickenButton"
+                android:id="@+id/gromov_imageButton"
                 android:src="@drawable/chicken_cat"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_chickenButton"
+                android:contentDescription="@string/name_gromovButton"
                 android:padding="5dp" />
 
             <ImageButton
@@ -153,8 +153,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="@string/name_chickenButton"
-                android:id="@+id/button_chicken_bottom"
+                android:text="@string/name_gromovButton"
+                android:id="@+id/button_gromov_bottom"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -166,7 +166,7 @@
                 android:layout_height="30dp"
                 android:text="@string/name_vtoroeButton"
                 android:id="@+id/button_vtoroe_bottom"
-                android:onClick="saladCatButton"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -238,7 +238,7 @@
                 android:layout_height="30dp"
                 android:text="@string/name_vegetablesButton"
                 android:id="@+id/button_vegetables_bottom"
-                android:onClick="saladCatButton"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -264,7 +264,7 @@
                 android:layout_height="30dp"
                 android:text="@string/name_drinksButton"
                 android:id="@+id/button_drinks_bottom"
-                android:onClick="saladCatButton"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
