--- a/app/src/main/res/layout/superstars_layout.xml
+++ b/app/src/main/res/layout/superstars_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:background="@color/light_green"
+    android:background="@color/gray_header"
     android:orientation="vertical"
     android:fillViewport="false"
     android:focusable="false"
@@ -24,12 +24,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:id="@+id/saladButton"
-                android:src="@drawable/salad_cat"
+                android:id="@+id/antonderyabin_ImageButton"
+                android:src="@drawable/deryabin"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
-                android:onClick="saladCatButton"
-                android:contentDescription="@string/salad_descr"
+                android:onClick="antonDeryabinButton"
+                android:contentDescription="@string/anton_deryabin_descr"
                 android:cropToPadding="false"
                 android:background="#ffffff"
                 android:padding="5dp"
@@ -40,13 +40,13 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:id="@+id/soupButton"
-                android:src="@drawable/soup_cat"
+                android:id="@+id/sergwhite_ImageButton"
+                android:src="@drawable/white"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
                 android:padding="5dp"
-                android:contentDescription="@string/name_soupButton"
+                android:contentDescription="@string/name_sergwhiteButton"
                 android:layout_marginLeft="1.5dp"
                 android:layout_marginStart="1.5dp" />
 
@@ -59,9 +59,9 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="@string/name_saladButton"
-                android:id="@+id/button_salad_bottom"
-                android:onClick="saladCatButton"
+                android:text="@string/name_antonDeryabin"
+                android:id="@+id/button_antonderyabin_bottom"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -74,8 +74,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="@string/name_soupButton"
-                android:id="@+id/button_soup_bottom"
+                android:text="@string/name_sergwhiteButton"
+                android:id="@+id/button_sergwhite_bottom"
                 android:layout_column="1"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -92,12 +92,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:id="@+id/meatButton"
-                android:src="@drawable/meat_cat"
+                android:id="@+id/loko_imageButton"
+                android:src="@drawable/lokomotiv"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_meatButton"
+                android:contentDescription="@string/name_lokoButton"
                 android:padding="5dp"
                 android:layout_marginRight="1.5dp"
                 android:layout_marginEnd="1.5dp"/>
@@ -105,12 +105,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:id="@+id/chickenButton"
-                android:src="@drawable/chicken_cat"
+                android:id="@+id/gromov_imageButton"
+                android:src="@drawable/gromov"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_chickenButton"
+                android:contentDescription="@string/name_gromovButton"
                 android:padding="5dp"
                 android:layout_marginLeft="1.5dp"
                 android:layout_marginStart="1.5dp" />
@@ -123,9 +123,9 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="@string/name_meatButton"
-                android:id="@+id/button_meat_bottom"
-                android:onClick="saladCatButton"
+                android:text="@string/name_lokoButton"
+                android:id="@+id/button_loko_bottom"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -138,8 +138,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="@string/name_chickenButton"
-                android:id="@+id/button_chicken_bottom"
+                android:text="@string/name_gromovButton"
+                android:id="@+id/button_gromov_bottom"
                 android:layout_column="1"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -188,7 +188,7 @@
                 android:layout_height="30dp"
                 android:text="@string/name_vtoroeButton"
                 android:id="@+id/button_vtoroe_bottom"
-                android:onClick="saladCatButton"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -252,7 +252,7 @@
                 android:layout_height="30dp"
                 android:text="@string/name_vegetablesButton"
                 android:id="@+id/button_vegetables_bottom"
-                android:onClick="saladCatButton"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -316,7 +316,7 @@
                 android:layout_height="30dp"
                 android:text="@string/name_drinksButton"
                 android:id="@+id/button_drinks_bottom"
-                android:onClick="saladCatButton"
+                android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
                 android:padding="-5dp"
