--- a/app/src/main/res/layout-land/superstars_layout.xml
+++ b/app/src/main/res/layout-land/superstars_layout.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
                 android:id="@+id/antonderyabin_ImageButton"
-                android:src="@drawable/salad_cat"
+                android:src="@drawable/deryabin"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:onClick="antonDeryabinButton"
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
                 android:id="@+id/sergwhite_ImageButton"
-                android:src="@drawable/soup_cat"
+                android:src="@drawable/white"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
                 android:id="@+id/loko_imageButton"
-                android:src="@drawable/meat_cat"
+                android:src="@drawable/lokomotiv"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
                 android:id="@+id/gromov_imageButton"
-                android:src="@drawable/chicken_cat"
+                android:src="@drawable/gromov"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
@@ -124,12 +124,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/vtoroeButton"
-                android:src="@drawable/vtoroe_cat"
+                android:id="@+id/lapatka_imageButton"
+                android:src="@drawable/lapatka"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_vtoroeButton"
+                android:contentDescription="@string/name_lapatkaButton"
                 android:padding="5dp"
                 android:layout_marginRight="3dp"
                 android:layout_marginLeft="3dp" />
@@ -137,12 +137,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/fishButton"
-                android:src="@drawable/fish_cat"
+                android:id="@+id/kremnev_imageButton"
+                android:src="@drawable/krasavchik"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_fishButton"
+                android:contentDescription="@string/name_kremnevButton"
                 android:padding="5dp" />
         </TableRow>
 
@@ -164,8 +164,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="@string/name_vtoroeButton"
-                android:id="@+id/button_vtoroe_bottom"
+                android:text="@string/name_lapatkaButton"
+                android:id="@+id/button_lapatka_bottom"
                 android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
@@ -179,8 +179,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="@string/name_fishButton"
-                android:id="@+id/button_fish_bottom"
+                android:text="@string/name_kremnevButton"
+                android:id="@+id/button_kremnev_bottom"
                 android:layout_column="1"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -196,23 +196,23 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/vegetablesButton"
-                android:src="@drawable/vegetables_cat"
+                android:id="@+id/joker_imageButton"
+                android:src="@drawable/joker"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_vegetablesButton"
+                android:contentDescription="@string/name_jokerButton"
                 android:padding="5dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/vypechkaButton"
-                android:src="@drawable/vypechka_cat"
+                android:id="@+id/crimson_imageButton"
+                android:src="@drawable/krimson"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_vypechkaButton"
+                android:contentDescription="@string/name_crimsonButton"
                 android:padding="5dp"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp" />
@@ -220,12 +220,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/drinksButton"
-                android:src="@drawable/drinks_cat"
+                android:id="@+id/vulkan_imageButton"
+                android:src="@drawable/vulkan"
                 android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_drinksButton"
+                android:contentDescription="@string/name_vulkanButton"
                 android:padding="5dp" />
         </TableRow>
 
@@ -236,8 +236,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="@string/name_vegetablesButton"
-                android:id="@+id/button_vegetables_bottom"
+                android:text="@string/name_jokerButton"
+                android:id="@+id/button_joker_bottom"
                 android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
@@ -249,8 +249,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="@string/name_vypechkaButton"
-                android:id="@+id/button_vypechka_bottom"
+                android:text="@string/name_crimsonButton"
+                android:id="@+id/button_crimson_bottom"
                 android:layout_column="1"
                 android:layout_weight="1"
                 android:padding="-5dp"
@@ -262,8 +262,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="@string/name_drinksButton"
-                android:id="@+id/button_drinks_bottom"
+                android:text="@string/name_vulkanButton"
+                android:id="@+id/button_vulkan_bottom"
                 android:onClick="antonDeryabinButton"
                 android:layout_column="0"
                 android:layout_weight="1"
@@ -280,11 +280,11 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:id="@+id/prazdnikiButton"
-                android:src="@drawable/prazdniki_cat"
+                android:id="@+id/schukin_imageButton"
+                android:src="@drawable/schykin"
                 android:scaleType="fitCenter"
                 android:background="#ffffff"
-                android:contentDescription="@string/name_prazdnikiButton"
+                android:contentDescription="@string/name_schukinButton"
                 android:padding="5dp"
                 android:layout_weight="0"
                 android:layout_column="0" />
@@ -297,8 +297,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="@string/name_prazdnikiButton"
-                android:id="@+id/button_prazdniki_bottom"
+                android:text="@string/name_schukinButton"
+                android:id="@+id/button_schukin_bottom"
                 android:layout_column="0"
                 android:padding="-5dp"
                 android:background="#ffffff"
