--- a/app/src/main/res/layout-land/superstars_layout.xml
+++ b/app/src/main/res/layout-land/superstars_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
+<android.support.v4.widget.NestedScrollView
+    android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@color/light_green"
     android:orientation="horizontal"
