--- a/app/src/main/res/layout/buytickets_layout.xml
+++ b/app/src/main/res/layout/buytickets_layout.xml
@@ -19,7 +19,7 @@
     <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
         android:layout_width="match_parent"
         android:id="@+id/drawerLayout">
 
@@ -169,4 +169,35 @@
 
         </android.support.design.widget.NavigationView>
     </android.support.v4.widget.DrawerLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Загрузить"
+            android:id="@+id/btn_download"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+        <TextView
+            android:id="@+id/text_view"
+            android:textColor="@android:color/holo_green_dark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Статус"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_alignBottom="@+id/btn_download"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/download_status"
+            android:layout_width="wrap_content"
+            android:textColor="@android:color/holo_blue_dark"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/text_view"
+            android:layout_alignRight="@+id/btn_download"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </RelativeLayout>
 </LinearLayout>
